# auth-az

./: README.md  authaz.code-workspace
authz/: pyproject.toml  server.py  start.sh
backend/: authz_helpers.py  pyproject.toml  server.py  start.sh
frontend/: package-lock.json
frontend/src/: App.tsx  BooksList.tsx  Comp.tsx  constants.ts
