[tool.poetry]
name = "authz"
version = "0.1.0"
description = ""
authors = ["Andrej T."]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
vakt = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
